--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 :root{
   --darkViolet: rgb(32,31,45);
   --orange: rgb(255, 73, 0);
+  --darkOrange:rgb(199,69,17);
   --fontViolet:rgb(29,32,48);
   --grey:rgb(242,242,244);
   --fontGrey:rgb(192,192,192);
@@ -100,7 +101,6 @@ nav .navbar h2{
   font-size: 3rem;
   color: var(--orange);
 }
-
 nav .navbar ul{
   align-self: stretch;
   display: flex;
@@ -131,6 +131,71 @@ nav .navbar .dropDown:hover{
   color: var(--orange);
   transition: var(--transition);
 }
+
+/* HEADER */
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),url("./img/header.jpg");
+  width: 100%;
+  height: 50vh;
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-position: top;
+}
+
+header h3 {
+  color: var(--orange);
+  font-size: 3rem;
+  font-weight: 300;
+}
+header h1 {
+  color: var(--white);
+  font-size: 4rem;
+  font-weight: 300;
+  margin: 5px auto;
+}
+header article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header article input{
+  flex: 0 0 80%;
+  border: none;
+  outline: none;
+  padding: 20px 25px;
+  font-size: 1.2rem;
+}
+header article input[type="submit"] {
+  background-color: var(--orange);
+  color: var(--white);
+  flex: 0 0 10%;
+}
+header article input[type="submit"]:hover{
+  background-color: var(--darkOrange);
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* RESPONSIVE */
 @media(max-width:768px){
