7.commit/Add and style Price page components

--- a/src/App.css
+++ b/src/App.css
@@ -252,6 +252,138 @@ footer .row article span i:hover{
 
 /* //////////////////////////////////////////////////////////////// */
 /* //////////////////// PAGES ///////////////////////////////////// */
+/* PRICE */
+/* PricingPack */
+
+.pricingPlan{
+  padding: var(--padding);
+}
+
+.pricingPlan hgroup{
+  text-align: center;
+  font-size: 2rem;
+}
+
+.pricingPlan hgroup h3{
+  color: var(--orange);
+  font-weight: 300;
+}
+
+.pricingPlan hgroup h2{
+  color: var(--darkViolet);
+  letter-spacing: 2px;
+}
+
+.pricingPlan div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px 0px;
+  text-align: center;
+}
+
+.pricingPlan div article{
+  flex: 0 0 20%;
+  background-color: var(--grey);
+  padding: 15px 0px;
+  margin: 10px;
+}
+
+.pricingPlan div article h2{
+    font-size: 3rem;
+    color: var(--fontGrey);
+    font-weight: 300;
+    padding: 10px;
+}
+
+.pricingPlan div article h4{
+  font-size: 3rem;
+  background-color: var(--orange);
+  font-weight: 300;
+  padding: 0px 10px;
+}
+
+.pricingPlan div article p{
+  color: var(--fontGrey);
+  padding: 15px 5px 0px 5px;
+  font-size: 1.3rem;
+}
+
+.pricingPlan div article button{
+  font-size: 1.3rem;
+  color: var(--white);
+  background-color: var(--orange);
+  border: none;
+  padding: 10px;
+  margin: 15px auto;
+}
+
+.pricingPlan div article button:hover{
+  background-color: var(--darkOrange);
+  cursor: pointer;
+  transition: var(--transition);
+}
+/* TESTIMONIAL */
+.testimonial{
+  padding: var(--padding);
+}
+.testimonial hgroup{
+  text-align: center;
+  font-size: 2rem;
+}
+
+.testimonial hgroup h3{
+  color: var(--orange);
+  font-weight: 300;
+}
+
+.testimonial hgroup h2{
+  color: var(--darkViolet);
+  letter-spacing: 2px;
+}
+.testimonial article{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  position: relative;
+  background-color: var(--grey);
+  margin:0px 10px ;
+
+}
+
+.testimonial article div{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.testimonial article div p{
+ color: var(--fontViolet);
+ font-weight: 400;
+}
+
+.testimonial article div img{
+  border-radius: 100%;
+  padding: 5px;
+}
+
+.testimonial .quote{
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 3rem;
+  color: var(--orange);
+}
+
+.testimonial p{
+  padding: 10px 20px;
+  color: var(--fontGrey);
+  font-weight: 300;
+
+}
+
 /* CONTACT */
 .contact {
   display: flex;
